--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
-  "homepage": "https://vishaltest2.vercel.app",
-  "name": "e-com",
+  "name": "E-commercee",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,8 +21,6 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
